[package]
name = "p100-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10" }
uuid = { version = "1.0.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
